fixed responsive layout problems

--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -95,6 +95,15 @@ body {
 	#mnd-show-sidebar {
 		margin: 10px 20px;
 	}
+	#mnd-sidebar-logo {
+	position: absolute;
+	left: 50%;
+	top: 0px;
+	height: 60px;
+	width: 60px;
+	margin-left: -30px;
+	margin-top: 10px;
+	}
 }
 
 
